# docker-registry-cleanup

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: main.rs
